# CellBender

./: .gitignore  .pdm-python  MANIFEST.in  pyproject.toml  ruff.toml
src/cellbender/: __init__.py  base_cli.py  monitor.py
src/cellbender/remove_background/: checkpoint.py  cli.py  downstream.py  estimation.py  model.py  posterior.py  run.py  sparse_utils.py  train.py
src/cellbender/remove_background/data/: dataprep.py  dataset.py  io.py  priors.py
src/cellbender/remove_background/data/extras/: simulate.py
src/cellbender/remove_background/distributions/: NegativeBinomialPoissonConv.py  NegativeBinomialPoissonConvApprox.py  NullDist.py
src/cellbender/remove_background/tests/: conftest.py  mckp_memory_profiling.py  test_checkpoint.py  test_dataprep.py  test_dataset.py  test_downstream.py  test_estimation.py  test_integration.py  test_io.py  test_monitor.py  test_posterior.py  test_sparse_utils.py  test_train.py
src/cellbender/remove_background/tests/benchmarking/: run_benchmark.py  run_benchmark_result_tabulation.py
src/cellbender/remove_background/vae/: base.py  encoder.py
