[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "cellbender"
version = "0.1.0"
authors = [
    {name = "Stephen Fleming", email = "unknown@whoknows.com"}, {name = "Mehrtash Babadi", email = "unknown@whoknows.com"}]
license = {text = "BSD (3-Clause)"}
description = "A software package for eliminating technical artifacts from high-throughput single-cell RNA sequencing (scRNA-seq) data"
keywords = ["scRNA-seq", "bioinformatics"]
requires-python = ">= 3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.7",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = ["numpy>2.0.0", "scipy>=1.15.1", "tables>=3.10.2", "pandas>=2.0.0", "pyro-ppl>=1.9.1", "torch>=2.5.1", "matplotlib>=3.10.0", "anndata==0.11.3", "loompy>=3.0.8", "psutil>=6.1.1"]
readme = "README.rst"

[project.urls]
Homepage = "http://github.com/broadinstitute/CellBender"
Documentation = "http://cellbender.readthedocs.io"

[project.scripts]
cellbender = "cellbender.base_cli:main"

[project.optional-dependencies]
docs = [
    "sphinx>=8.1.3",
    "sphinx-rtd-theme>=3.0.2",
    "sphinx-autodoc-typehints>=3.0.1",
    "sphinxcontrib-programoutput>=0.18",
    "sphinx-argparse>=0.5.2",
]
[tool.pdm]
distribution = true
[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "scikit-learn>=1.6.1",
    "ruff>=0.9.2",
]
